--- a/style/signUp.css
+++ b/style/signUp.css
@@ -34,8 +34,8 @@ header{
 
 .loginContainer{  
   width: 45%;
-  height: 522px;
-  margin-top: 120px;
+  min-height: 522px;
+  margin-top: 80px;
   display: flex;
   overflow: hidden;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -101,4 +101,16 @@ input{
 
 .inputArea:has(input:focus) {
   border-bottom: 1px solid #6984e6;
+}
+
+.error{
+  color: red;
+}
+
+.added_success{
+  color: green;
+}
+
+.added_failed{
+  color: red;
 }
